Fix min-height issue on Safari/iOS
Using percent instead of `vh` fixes an issue where Safari wouldn't
actually extend to full height if zoomed out in the browser

--- a/client/login/wp-login/style.scss
+++ b/client/login/wp-login/style.scss
@@ -1,7 +1,7 @@
 .is-section-login {
 	padding-bottom: 47px;
 	position: relative;
-	min-height: calc( 100vh - 47px );
+	min-height: calc( 100% - 47px );
 
 	.layout__content {
 		position: static;
